tests/neg-macros/i9014b/Test_2.scala
val tests = summon[Bar] // error
